--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "TestApp",
-    "slug": "TestApp",
+    "name": "FrontendCale",
+    "slug": "FrontendCale",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
