--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@mui/icons-material": "^5.15.4",
     "@mui/x-date-pickers": "^6.18.7",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
