--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-paper": "^5.12.0",
+    "react-native-paper": "^5.12.1",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
-    "typescript": "^5.1.3",
-    "@expo/webpack-config": "^19.0.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
